crates/ruff/tests/snapshots/integration_test__stdin_json.snap
---
source: crates/ruff/tests/integration_test.rs
info:
  program: ruff
  args:
    - check
    - "--output-format"
    - json
    - "--no-cache"
    - "--isolated"
    - "-"
    - "--stdin-filename"
    - F401.py
  stdin: "import os\n"
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "cell": null,
    "code": "F401",
    "end_location": {
      "column": 10,
      "row": 1
    },
    "filename": "/path/to/F401.py",
    "fix": {
      "applicability": "safe",
      "edits": [
        {
          "content": "",
          "end_location": {
            "column": 1,
            "row": 2
          },
          "location": {
            "column": 1,
            "row": 1
          }
        }
      ],
      "message": "Remove unused import: `os`"
    },
    "location": {
      "column": 8,
      "row": 1
    },
    "message": "`os` imported but unused",
    "name": "unused-import",
    "noqa_row": 1,
    "severity": "error",
    "url": "https://docs.astral.sh/ruff/rules/unused-import"
  }
]
----- stderr -----
