crates/ruff/tests/snapshots/integration_test__stdin_up045_nested_optional_flatten_all.snap
---
source: crates/ruff/tests/integration_test.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--isolated"
    - "-"
    - "--select"
    - UP045
    - "--diff"
    - "--target-version"
    - py312
  stdin: "from typing import Optional\nnested_optional: Optional[Optional[Optional[str]]] = None\n"
---
success: false
exit_code: 1
----- stdout -----
@@ -1,2 +1,2 @@
 from typing import Optional
-nested_optional: Optional[Optional[Optional[str]]] = None
+nested_optional: str | None = None


----- stderr -----
Would fix 1 error.
